--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "hypercore-protocol",
-  "version": "8.0.0",
-  "description": "Stream that implements the hypercore protocol",
+  "name": "ddatabase-protocol",
+  "version": "7.0.0",
+  "description": "Stream that implements the ddatabase protocol",
   "main": "index.js",
   "dependencies": {
     "abstract-extension": "^3.0.1",
     "debug": "^4.1.1",
-    "hypercore-crypto": "^2.0.0",
+    "ddatabase-crypto": "git://github.com/DistributedWeb/ddatabase-crypto.git#8ebb4edfcf9d422d02951360f6e66a7b07ee1cd5",
     "inspect-custom-symbol": "^1.1.0",
     "nanoguard": "^1.2.1",
     "pretty-hash": "^1.0.1",
-    "simple-hypercore-protocol": "^2.0.0",
+    "simple-ddatabase-protocol": "git://github.com/DistributedWeb/simple-ddatabase-protocol.git#da7f3979b9e194e1ed3ef2bfd9a88d0b03adc139",
     "streamx": "^2.1.0",
     "timeout-refresh": "^1.0.0"
   },
@@ -23,12 +23,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/mafintosh/hypercore-protocol.git"
+    "url": "https://github.com/distributedweb/ddatabase-protocol.git"
   },
   "author": "Mathias Buus (@mafintosh)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/mafintosh/hypercore-protocol/issues"
+    "url": "https://github.com/distributedweb/ddatabase-protocol/issues"
   },
-  "homepage": "https://github.com/mafintosh/hypercore-protocol"
+  "homepage": "https://github.com/distributedweb/ddatabase-protocol"
 }
