--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "dependencies": {
     "abstract-extension": "^3.0.1",
     "debug": "^4.1.1",
-    "ddatabase-crypto": "^2.0.0",
+    "ddatabase-crypto": "git://github.com/DistributedWeb/ddatabase-crypto.git#cb6ad0a594998b258fe62531643c66cab1e9fd9e",
     "inspect-custom-symbol": "^1.1.0",
     "nanoguard": "^1.2.1",
     "pretty-hash": "^1.0.1",
-    "simple-ddatabase-protocol": "^2.0.0",
+    "simple-ddatabase-protocol": "git://github.com/DistributedWeb/simple-ddatabase-protocol.git#37d5def7f020cd5af0c10704904afd2c9f12fbdb",
     "streamx": "^2.1.0",
     "timeout-refresh": "^1.0.0"
   },
